#138128, #137737: strings replaced by constants; info message provided in new file wizard panel